# Daily-Pilot

./: .codecov.yml  .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  compose-dev.yml  index.html
.github/workflows/: python-check.yml
backend/: Dockerfile  README.md  pyproject.toml  pytest.ini
backend/src/: main.py
backend/src/api/routers/v1/: __init__.py
backend/src/api/routers/v1/endpoints/: prompt.py  workflow.py
backend/src/api/schemas/: base.py  prompt.py
backend/src/api/services/: workflow.py
backend/src/config/: settings.py
backend/tests/: conftest.py  test_smoke.py
backend/tests/test_connections/: test_mongodb.py  test_postgres.py  test_redis.py
